# digital-marketing-ai

./: .gitignore  README.md  pyproject.toml
prompts/: copywriter.md
scripts/: agent.py  transcripter.py  transcription_reader.py  transcriptions.json
tmp/: storage.db
