[project]
name = "digital-marketing-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno==1.5.0",
    "fastapi>=0.116.1",
    "groq>=0.31.0",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "tavily-python>=0.7.10",
]
